# social-media-app

./: .gitignore  README.md  pyproject.toml
src/: config.py  database.py  main.py  models.py  oauth2.py  schema.py  utils.py
src/routers/: auth.py  post.py  user.py  vote.py
