[tool.poetry]
name = "fapi"
version = "0.1.0"
description = ""
authors = ["Amin <neemamin22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.3"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
